infra/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
